<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CookingActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/cookRecipeFrag_btn_show_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/ingredients"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cookRecipeFrag_btn_show_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/instructions"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/cookRecipeFrag_txt_instructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookRecipeFrag_txt_title"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cookRecipeFrag_recycler_ingredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cookRecipeFrag_txt_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookRecipeFrag_txt_title"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"/>

    <TextView
        android:id="@+id/cookRecipeFrag_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/recipe_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style='?android:attr/buttonBarStyle'
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp">

        <Button
            android:id="@+id/cookRecipeFrag_btn_pin_recipe"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:text="@string/pin"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cookRecipeFrag_btn_scale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scale"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cookRecipeFrag_btn_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/timer"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>